# interpretable_tsne

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
src/interpretable_tsne/: _quad_tree.pyx  tsne.py
tests/: test_bn_approx.py  test_data.npz  test_gradcomps.py
