[metadata]
name = interpretable_tsne
version = 0.0.1
description = Implementation of the gradient-based t-SNE sttribution method described in our GLBIO oral presentation: Towards Computing Attributions for Dimensionality Reduction.
author = Matthew Scicluna
author_email = mattcscicluna@gmail.com

[options]
packages = interpretable_tsne
install_requires =
    numpy
    cython

#[options.package_data]
#my_package = _utils.pyx, _quad_tree.pyx, _bintree.pyx, _barnes_hut_tsne.pyx, _grad_comps.pyx

[build_ext]
build_temp = build
cythonize=1
sources = src/interpretable_tsne/*.pyx
include_dirs = numpy.get_include()
