#[metadata]
#name = interpretable_tsne
#version = 0.0.1
#description = Implementation of the gradient-based t-SNE sttribution method described in our GLBIO oral presentation: Towards Computing Attributions for Dimensionality Reduction.
#author = Matthew Scicluna
#author_email = mattcscicluna@gmail.com

#[options]
#packages = interpretable_tsne

#[build_ext]
#build_temp = build
#include_dirs = numpy.get_include()

#[cythonize]
#sources = src/interpretable_tsne/*.pyx

[metadata]
name = interpretable_tsne
version = 0.0.10
description = Implementation of the gradient-based t-SNE attribution method described in our GLBIO oral presentation: Towards Computing Attributions for Dimensionality Reduction.
author = Matthew Scicluna
author_email = mattcscicluna@gmail.com

[options]
packages = find:

[options.packages.find]
where = src

#[build_ext]
#build_temp = build
#include_dirs = numpy.get_include()

#[options.extras_require]
#dev = cython
